@@ -21,6 +21,8 @@
 #' @param about An object of class \code{XiMpLe.node} with descriptive information on the plugin, its authors and dependencies,
 #'		see \code{link[XiMpLe:rk.XML.about]{rk.XML.about}} for details. Only useful for information that differs from the \code{<about>}
 #'		section of the \code{.pluginmap} file. Skipped if \code{NULL}.
+#' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
+#'		that it was generated by \code{rkwarddev} and changes should be done to the script.
 #' @return An object of class \code{XiMpLe.doc}.
 #' @export
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
@@ -39,13 +41,19 @@
 #' test.plugin <- rk.XML.plugin("My test", dialog=test.tabbook)
 #' cat(pasteXMLTree(test.plugin))
 
-rk.XML.plugin <- function(name, dialog=NULL, wizard=NULL, logic=NULL, snippets=NULL, provides=NULL, help=TRUE, pluginmap=NULL, label=NULL, clean.name=TRUE, about=NULL){
+rk.XML.plugin <- function(name, dialog=NULL, wizard=NULL, logic=NULL, snippets=NULL, provides=NULL, help=TRUE, pluginmap=NULL, label=NULL, clean.name=TRUE, about=NULL, gen.info=TRUE){
 	if(isTRUE(clean.name)){
 		name.orig <- name
 		name <- clean.name(name)
 	} else {}
 
-	all.children <- list(rk.XML.code(file=paste(name, ".js", sep="")))
+	all.children <- list()
+
+	if(isTRUE(gen.info)){
+		all.children[[length(all.children)+1]] <- generator.info
+	} else {}
+
+	all.children[[length(all.children)+1]] <- rk.XML.code(file=paste(name, ".js", sep=""))
 
 	if(isTRUE(help)){
 		all.children[[length(all.children)+1]] <- rk.XML.help(file=paste(name, ".rkh", sep=""))
