@@ -39,6 +39,8 @@
 #'			\item{\code{"js"}}{Create the plugin \code{.js} JavaScript file skeleton.}
 #'			\item{\code{"rkh"}}{Create the plugin \code{.rkh} help file skeleton.}
 #'		}
+#' @param gen.info Logical, if \code{TRUE} comment notes will be written into the genrated documents,
+#'		that they were generated by \code{rkwarddev} and changes should be done to the script.
 #' @param indent.by A character string defining the indentation string to use.
 #' @return An object of class \code{rk.plug.comp}.
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
@@ -63,7 +65,7 @@
 
 rk.plugin.component <- function(about, xml=list(), js=list(), rkh=list(),
 	provides=c("logic", "dialog"), scan=c("var", "saveobj", "settings"), hierarchy="test",
-	pluginmap=NULL, create=c("xml", "js", "rkh"), indent.by="\t"){
+	pluginmap=NULL, create=c("xml", "js", "rkh"), gen.info=TRUE, indent.by="\t"){
 
 	if(inherits(about, "XiMpLe.node")){
 		about.node.name <- about@name
@@ -119,7 +121,8 @@ rk.plugin.component <- function(about, xml=list(), js=list(), rkh=list(),
 			snippets=xml[["snippets"]],
 			provides=provides,
 			pluginmap=pluginmap,
-			about=about.node)
+			about=about.node,
+			gen.info=gen.info)
 		this.component@xml <- XML.plugin
 	} else {
 		this.component@xml <- rk.XML.plugin("")
@@ -159,6 +162,7 @@ rk.plugin.component <- function(about, xml=list(), js=list(), rkh=list(),
 			calculate=js[["calculate"]],
 			printout=js[["printout"]],
 			doPrintout=js[["doPrintout"]],
+			gen.info=gen.info,
 			indent.by=indent.by)
 		this.component@js <- JS.code
 	} else {
@@ -188,7 +192,8 @@ rk.plugin.component <- function(about, xml=list(), js=list(), rkh=list(),
 			settings=rkh[["settings"]],
 			related=rkh[["related"]],
 			technical=rkh[["technical"]],
-			title=rk.rkh.title(name.orig))
+			title=rk.rkh.title(name.orig),
+			gen.info=gen.info)
 		this.component@rkh <- rkh.doc
 	} else {
 		this.component@rkh <- rk.rkh.doc()
