@@ -15,6 +15,8 @@
 #'		\code{\link[rkwarddev:rk.rkh.technical]{rk.rkh.technical}} for details.
 #' @param title An object of class \code{XiMpLe.node} to be pasted as the \code{<title>} section. See
 #'		\code{\link[rkwarddev:rk.rkh.title]{rk.rkh.title}} for details.
+#' @param gen.info Logical, if \code{TRUE} a comment note will be written into the document,
+#'		that it was generated by \code{rkwarddev} and changes should be done to the script.
 #' @return An object of class \code{XiMpLe.doc}.
 #' @seealso
 #'		\code{\link[rkwarddev:rk.rkh.summary]{rk.rkh.summary}},
@@ -26,9 +28,13 @@
 #'		and the \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @export
 
-rk.rkh.doc <- function(summary=NULL, usage=NULL, sections=NULL, settings=NULL, related=NULL, technical=NULL, title=NULL){
+rk.rkh.doc <- function(summary=NULL, usage=NULL, sections=NULL, settings=NULL, related=NULL, technical=NULL, title=NULL, gen.info=TRUE){
 
 	all.children <- list()
+
+	if(isTRUE(gen.info)){
+		all.children[[length(all.children)+1]] <- generator.info
+	} else {}
 
 	if(!is.null(title)){
 		# check if this is *really* a title section
