@@ -6,7 +6,7 @@
   = list(), provides = c("logic", "dialog"), scan =
   c("var", "saveobj", "settings"), hierarchy = "test",
   pluginmap = NULL, create = c("xml", "js", "rkh"),
-  indent.by = "\t")
+  gen.info = TRUE, indent.by = "\t")
 }
 \arguments{
   \item{about}{Either a character string with the name of
@@ -97,6 +97,11 @@
   \code{.js} JavaScript file skeleton.}
   \item{\code{"rkh"}}{Create the plugin \code{.rkh} help
   file skeleton.} }}
+
+  \item{gen.info}{Logical, if \code{TRUE} comment notes
+  will be written into the genrated documents, that they
+  were generated by \code{rkwarddev} and changes should be
+  done to the script.}
 
   \item{indent.by}{A character string defining the
   indentation string to use.}
